Changes to word2vec results

--- a/Code/Jupyter-notebooks/Word2Vec Parameter Optimization.ipynb
+++ b/Code/Jupyter-notebooks/Word2Vec Parameter Optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -48,9 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -81,9 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3895,7 +3897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -3995,6 +3997,18 @@
     "    \n",
     "    best_parameter.append((seed, [org_error, fs_error, org_auc, fs_auc]))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def most_common(lst):\n",
+    "    return max(set(lst), key=lst.count)"
    ]
   },
   {
@@ -11902,9 +11916,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -11957,28 +11971,28 @@
     "    mean_auc_dros_org_be = mean_auc_dros_be[0::2]\n",
     "    mean_auc_dros_fs_be = mean_auc_dros_be[1::2]\n",
     "    \n",
-    "    org_error = max([(mean_err_dros_org_strict.index(min(mean_err_dros_org_strict))+1), \n",
-    "                     (mean_err_dros_org_gen.index(min(mean_err_dros_org_gen))+1), \n",
-    "                     (mean_err_dros_org_be.index(min(mean_err_dros_org_be))+1)])\n",
+    "    org_error = max([(mean_err_dros_org_strict.index(min(mean_err_dros_org_strict))+2), \n",
+    "                     (mean_err_dros_org_gen.index(min(mean_err_dros_org_gen))+2), \n",
+    "                     (mean_err_dros_org_be.index(min(mean_err_dros_org_be))+2)])\n",
     "    \n",
-    "    fs_error = max([(mean_err_dros_fs_strict.index(min(mean_err_dros_fs_strict))+1), \n",
-    "                     (mean_err_dros_fs_gen.index(min(mean_err_dros_fs_gen))+1), \n",
-    "                     (mean_err_dros_fs_be.index(min(mean_err_dros_fs_be))+1)])\n",
+    "    fs_error = max([(mean_err_dros_fs_strict.index(min(mean_err_dros_fs_strict))+2), \n",
+    "                     (mean_err_dros_fs_gen.index(min(mean_err_dros_fs_gen))+2), \n",
+    "                     (mean_err_dros_fs_be.index(min(mean_err_dros_fs_be))+2)])\n",
     "    \n",
-    "    org_auc = max([(mean_auc_dros_org_strict.index(max(mean_auc_dros_org_strict))+1), \n",
-    "                     (mean_auc_dros_org_gen.index(max(mean_auc_dros_org_gen))+1), \n",
-    "                     (mean_auc_dros_org_be.index(max(mean_auc_dros_org_be))+1)])\n",
+    "    org_auc = max([(mean_auc_dros_org_strict.index(max(mean_auc_dros_org_strict))+2), \n",
+    "                     (mean_auc_dros_org_gen.index(max(mean_auc_dros_org_gen))+2), \n",
+    "                     (mean_auc_dros_org_be.index(max(mean_auc_dros_org_be))+2)])\n",
     "    \n",
-    "    fs_auc = max([(mean_auc_dros_fs_strict.index(max(mean_auc_dros_fs_strict))+1), \n",
-    "                     (mean_auc_dros_fs_gen.index(max(mean_auc_dros_fs_gen))+1), \n",
-    "                     (mean_auc_dros_fs_be.index(max(mean_auc_dros_fs_be))+1)])\n",
+    "    fs_auc = max([(mean_auc_dros_fs_strict.index(max(mean_auc_dros_fs_strict))+2), \n",
+    "                     (mean_auc_dros_fs_gen.index(max(mean_auc_dros_fs_gen))+2), \n",
+    "                     (mean_auc_dros_fs_be.index(max(mean_auc_dros_fs_be))+2)])\n",
     "    \n",
     "    best_parameter.append((seed, [org_error, fs_error, org_auc, fs_auc]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -11989,17 +12003,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(144, [1, 6, 6, 3])\n",
-      "(235, [1, 5, 6, 6])\n",
-      "(905, [3, 4, 6, 5])\n",
-      "(2895, [4, 1, 5, 3])\n",
-      "(3462, [5, 5, 4, 4])\n",
-      "(4225, [6, 5, 5, 5])\n",
-      "(5056, [5, 6, 6, 5])\n",
-      "(5192, [5, 4, 2, 2])\n",
-      "(7751, [4, 6, 6, 6])\n",
-      "(7813, [4, 6, 3, 4])\n",
-      "6\n"
+      "(144, [2, 7, 7, 4])\n",
+      "(235, [2, 6, 7, 7])\n",
+      "(905, [4, 5, 7, 6])\n",
+      "(2895, [5, 2, 6, 4])\n",
+      "(3462, [6, 6, 5, 5])\n",
+      "(4225, [7, 6, 6, 6])\n",
+      "(5056, [6, 7, 7, 6])\n",
+      "(5192, [6, 5, 3, 3])\n",
+      "(7751, [5, 7, 7, 7])\n",
+      "(7813, [5, 7, 4, 5])\n",
+      "7\n"
      ]
     }
    ],
@@ -13186,6 +13200,17 @@
     "    strict = pred.make_w2v_model(dros_strict_real, 'Drosophila/models/downsample/dros_strict_downsample_parameter_' + str(i[0]), w2v_parameters)\n",
     "    gen = pred.make_w2v_model(dros_gen_real, 'Drosophila/models/downsample/dros_gen_downsample_parameter_' + str(i[0]), w2v_parameters)\n",
     "    be = pred.make_w2v_model(dros_be_real, 'Drosophila/models/downsample/dros_be_downsample_parameter_' + str(i[0]), w2v_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "downsample = [(1, 0.1), (2, 0.01), (3, 0.001), (4, 0.0001), (5, 0.00001), (6, 0.000001)]"
    ]
   },
   {
@@ -15689,7 +15714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -15744,28 +15769,28 @@
     "    mean_auc_dros_org_be = mean_auc_dros_be[0::2]\n",
     "    mean_auc_dros_fs_be = mean_auc_dros_be[1::2]\n",
     "    \n",
-    "    org_error = max([(mean_err_dros_org_strict.index(min(mean_err_dros_org_strict))+1), \n",
-    "                     (mean_err_dros_org_gen.index(min(mean_err_dros_org_gen))+1), \n",
-    "                     (mean_err_dros_org_be.index(min(mean_err_dros_org_be))+1)])\n",
+    "    org_error = max([(mean_err_dros_org_strict.index(min(mean_err_dros_org_strict))), \n",
+    "                     (mean_err_dros_org_gen.index(min(mean_err_dros_org_gen))), \n",
+    "                     (mean_err_dros_org_be.index(min(mean_err_dros_org_be)))])\n",
     "    \n",
-    "    fs_error = max([(mean_err_dros_fs_strict.index(min(mean_err_dros_fs_strict))+1), \n",
-    "                     (mean_err_dros_fs_gen.index(min(mean_err_dros_fs_gen))+1), \n",
-    "                     (mean_err_dros_fs_be.index(min(mean_err_dros_fs_be))+1)])\n",
+    "    fs_error = max([(mean_err_dros_fs_strict.index(min(mean_err_dros_fs_strict))), \n",
+    "                     (mean_err_dros_fs_gen.index(min(mean_err_dros_fs_gen))), \n",
+    "                     (mean_err_dros_fs_be.index(min(mean_err_dros_fs_be)))])\n",
     "    \n",
-    "    org_auc = max([(mean_auc_dros_org_strict.index(max(mean_auc_dros_org_strict))+1), \n",
-    "                     (mean_auc_dros_org_gen.index(max(mean_auc_dros_org_gen))+1), \n",
-    "                     (mean_auc_dros_org_be.index(max(mean_auc_dros_org_be))+1)])\n",
+    "    org_auc = max([(mean_auc_dros_org_strict.index(max(mean_auc_dros_org_strict))), \n",
+    "                     (mean_auc_dros_org_gen.index(max(mean_auc_dros_org_gen))), \n",
+    "                     (mean_auc_dros_org_be.index(max(mean_auc_dros_org_be)))])\n",
     "    \n",
-    "    fs_auc = max([(mean_auc_dros_fs_strict.index(max(mean_auc_dros_fs_strict))+1), \n",
-    "                     (mean_auc_dros_fs_gen.index(max(mean_auc_dros_fs_gen))+1), \n",
-    "                     (mean_auc_dros_fs_be.index(max(mean_auc_dros_fs_be))+1)])\n",
+    "    fs_auc = max([(mean_auc_dros_fs_strict.index(max(mean_auc_dros_fs_strict))), \n",
+    "                     (mean_auc_dros_fs_gen.index(max(mean_auc_dros_fs_gen))), \n",
+    "                     (mean_auc_dros_fs_be.index(max(mean_auc_dros_fs_be)))])\n",
     "    \n",
     "    best_parameter.append((seed, [org_error, fs_error, org_auc, fs_auc]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -15776,17 +15801,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(144, [3, 5, 6, 5])\n",
-      "(235, [3, 6, 6, 5])\n",
-      "(905, [5, 5, 6, 6])\n",
-      "(2895, [5, 3, 5, 3])\n",
-      "(3462, [3, 5, 6, 6])\n",
-      "(4225, [2, 5, 5, 5])\n",
-      "(5056, [5, 6, 3, 3])\n",
-      "(5192, [4, 6, 5, 5])\n",
-      "(7751, [4, 5, 6, 5])\n",
-      "(7813, [6, 3, 6, 5])\n",
-      "5\n"
+      "(144, [2, 4, 5, 4])\n",
+      "(235, [2, 5, 5, 4])\n",
+      "(905, [4, 4, 5, 5])\n",
+      "(2895, [4, 2, 4, 2])\n",
+      "(3462, [2, 4, 5, 5])\n",
+      "(4225, [1, 4, 4, 4])\n",
+      "(5056, [4, 5, 2, 2])\n",
+      "(5192, [3, 5, 4, 4])\n",
+      "(7751, [3, 4, 5, 4])\n",
+      "(7813, [5, 2, 5, 4])\n",
+      "4\n"
      ]
     }
    ],
@@ -15852,7 +15877,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
