Added scripts for model making

--- a/Code/Jupyter-notebooks/Seeded Runs Results.ipynb
+++ b/Code/Jupyter-notebooks/Seeded Runs Results.ipynb
@@ -1719,14 +1719,16 @@
     "    \n",
     "    print ('\\nPredicting\\n')\n",
     "    errors = []\n",
+    "    probs = []\n",
     "    fpr = []\n",
     "    tpr = []\n",
+    "    labels = []\n",
     "\n",
     "    for entry in strict_final_list:\n",
-    "        error_w2v_norm, probs_w2v_norm = pred.XGB_classifier(entry[0], entry[1],\n",
+    "        pred_labels_norm, error_w2v_norm, probs_w2v_norm = pred.XGB_classifier(entry[0], entry[1],\n",
     "                                                             entry[2], entry[3])\n",
     "        fpr_w2v_norm, tpr_w2v_norm, _ = roc_curve(entry[3], probs_w2v_norm)\n",
-    "        error_w2v_fs, probs_w2v_fs = pred.XGB_classifier(entry[0], entry[1],\n",
+    "        pred_labels_fs, error_w2v_fs, probs_w2v_fs = pred.XGB_classifier(entry[0], entry[1],\n",
     "                                                         entry[2], entry[3],\n",
     "                                                         feature_selection=True)\n",
     "        fpr_w2v_fs, tpr_w2v_fs, _ = roc_curve(entry[3], probs_w2v_fs)\n",
