--- a/Code/Jupyter-notebooks/XGBoost_Grid_Search_Results.ipynb
+++ b/Code/Jupyter-notebooks/XGBoost_Grid_Search_Results.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -18,7 +20,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -43,7 +47,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -58,7 +64,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -82,7 +90,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -106,7 +116,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -130,7 +142,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -142,7 +156,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -158,7 +174,9 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -174,7 +192,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -190,7 +210,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -213,7 +235,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -223,6 +247,111 @@
     "               'min_child_weight': 1,\n",
     "               'max_depth': 6,\n",
     "               'reg_alpha': 0.01}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 't_a']\n",
+      "['a', 'b', 'c', 'd', 't_a', 't_b']\n",
+      "['a', 'b', 'c', 'd', 't_a', 't_b', 't_c']\n",
+      "['a', 'b', 'c', 'd', 't_a', 't_b', 't_c', 't_d']\n",
+      "['a', 'b', 'c', 'd', 't_a', 't_b', 't_c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 't'\n",
+    "a = ['a', 'b', 'c', 'd']\n",
+    "b = a\n",
+    "for i in a:\n",
+    "    z = p+'_'+i\n",
+    "    b = b + [z]\n",
+    "a = a[len()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = ['drosophila', 'yeast', 'rat', 'mouse', 'human']\n",
+    "def iterator(lst):\n",
+    "    for i in lst:\n",
+    "        yield i\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "drosophila yeast\n",
+      "drosophila rat\n",
+      "drosophila mouse\n",
+      "drosophila human\n",
+      "drosophila_rat yeast\n",
+      "drosophila_mouse yeast\n",
+      "drosophila_human yeast\n",
+      "drosophila_mouse rat\n",
+      "drosophila_human rat\n",
+      "drosophila_human mouse\n",
+      "drosophila_rat_mouse yeast\n",
+      "drosophila_rat_human yeast\n",
+      "drosophila_mouse_human yeast\n",
+      "drosophila_mouse_human rat\n",
+      "drosophila_rat_mouse_human yeast\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for i in a[1:]:\n",
+    "#     print(a[0]+i)\n",
+    "\n",
+    "all_names = []\n",
+    "for j in range(1, 5):\n",
+    "    z = itertools.combinations(iterator(a[1:]), j)\n",
+    "    for i in z:\n",
+    "        d = '_'.join(list(i))\n",
+    "        all_names.append(d)\n",
+    "for single_name in all_names:\n",
+    "    splt = single_name.split('_', 1)\n",
+    "    name_target = splt[0]\n",
+    "    if len(splt) == 1:\n",
+    "        name_start = a[0]\n",
+    "    else:\n",
+    "        name_start = a[0]+'_'+splt[1]\n",
+    "    print(name_start, name_target)"
    ]
   },
   {
