--- a/Code/Jupyter-notebooks/New_XGBoost_Results.ipynb
+++ b/Code/Jupyter-notebooks/New_XGBoost_Results.ipynb
@@ -225,6 +225,47 @@
       "\n",
       " Making Predictions\n",
       "\n",
+      " Fitting XGBoost Model!\n",
+      "\n",
+      " Making Predictions\n",
+      "\n",
+      " Fitting XGBoost Model!\n",
+      "\n",
+      " Making Predictions\n",
+      "\n",
+      " Fitting XGBoost Model!\n",
+      "\n",
+      " Making Predictions\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../Core-scripts/prediction.py:176: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  feature_vec = np.divide(feature_vec,nwords)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Predicting\n",
+      "\n",
+      "\n",
+      " Fitting XGBoost Model!\n",
+      "\n",
+      " Making Predictions\n",
+      "\n",
+      " Fitting XGBoost Model!\n",
+      "\n",
+      " Making Predictions\n",
+      "\n",
+      " Fitting XGBoost Model!\n",
+      "\n",
+      " Making Predictions\n",
+      "\n",
       " Fitting XGBoost Model!\n"
      ]
     }
