Added W2V tuning scripts

--- a/Code/Jupyter-notebooks/XGBoost Parameter Tuning.ipynb
+++ b/Code/Jupyter-notebooks/XGBoost Parameter Tuning.ipynb
@@ -1263,6 +1263,8 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -1471,7 +1473,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
