--- a/Code/Jupyter-notebooks/W2V model and XGBoost comparisons.ipynb
+++ b/Code/Jupyter-notebooks/W2V model and XGBoost comparisons.ipynb
@@ -1614,6 +1614,8 @@
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
