Updates and tests

--- a/Code/Jupyter-notebooks/XGBoost_Grid_Search_Results.ipynb
+++ b/Code/Jupyter-notebooks/XGBoost_Grid_Search_Results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -45,13 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/usr/local/lib/python3.5/dist-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "folder = '../../Results/GSCV_Results/'\n",
     "STRICT = mult_open(folder, 'GSCV_SR')\n",
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -114,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -154,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -208,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -219,9 +230,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'subsample': 0.6, 'colsample_bytree': 0.7, 'gamma': 0.2, 'min_child_weight': 1, 'max_depth': 6, 'reg_alpha': 0.005}\n",
-      "{'subsample': 0.8, 'colsample_bytree': 0.9, 'gamma': 0.3, 'min_child_weight': 1, 'max_depth': 3, 'reg_alpha': 0.01}\n",
-      "{'subsample': 0.6, 'colsample_bytree': 0.8, 'gamma': 0.0, 'min_child_weight': 1, 'max_depth': 6, 'reg_alpha': 0.1}\n"
+      "{'gamma': 0.2, 'reg_alpha': 0.005, 'max_depth': 6, 'colsample_bytree': 0.7, 'subsample': 0.6, 'min_child_weight': 1}\n",
+      "{'gamma': 0.3, 'reg_alpha': 0.01, 'max_depth': 3, 'colsample_bytree': 0.9, 'subsample': 0.8, 'min_child_weight': 1}\n",
+      "{'gamma': 0.0, 'reg_alpha': 0.1, 'max_depth': 6, 'colsample_bytree': 0.8, 'subsample': 0.6, 'min_child_weight': 1}\n"
      ]
     }
    ],
@@ -251,63 +262,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'b', 'c', 'd', 't_a']\n",
-      "['a', 'b', 'c', 'd', 't_a', 't_b']\n",
-      "['a', 'b', 'c', 'd', 't_a', 't_b', 't_c']\n",
-      "['a', 'b', 'c', 'd', 't_a', 't_b', 't_c', 't_d']\n",
-      "['a', 'b', 'c', 'd', 't_a', 't_b', 't_c']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p = 't'\n",
-    "a = ['a', 'b', 'c', 'd']\n",
-    "b = a\n",
-    "for i in a:\n",
-    "    z = p+'_'+i\n",
-    "    b = b + [z]\n",
-    "a = a[len()]"
+    "folder = '../../Results/GSCV/'\n",
+    "STRICT = mult_open(folder, 'GSCV_SR')\n",
+    "GEN = mult_open(folder, 'GSCV_GEN')\n",
+    "BE = mult_open(folder, 'GSCV_BE')\n",
+    "random_seeds = [144, 235, 905, 2895, 3462, 4225, 5056, 5192, 7751, 7813]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "STRICT_subsample = []\n",
+    "STRICT_colsample_bytree = []\n",
+    "STRICT_gamma = []\n",
+    "STRICT_min_child_weight = []\n",
+    "STRICT_max_depth = []\n",
+    "STRICT_reg_alpha = []\n",
+    "for i in range(10):\n",
+    "#     print(random_seeds[i], STRICT[i][1], STRICT[i][2])\n",
+    "    STRICT_subsample.append(STRICT[i][1]['subsample'])\n",
+    "    STRICT_colsample_bytree.append(STRICT[i][1]['colsample_bytree'])\n",
+    "    STRICT_gamma.append(STRICT[i][1]['gamma'])\n",
+    "    STRICT_min_child_weight.append(STRICT[i][1]['min_child_weight'])\n",
+    "    STRICT_max_depth.append(STRICT[i][1]['max_depth'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import itertools"
+    "GEN_subsample = []\n",
+    "GEN_colsample_bytree = []\n",
+    "GEN_gamma = []\n",
+    "GEN_min_child_weight = []\n",
+    "GEN_max_depth = []\n",
+    "GEN_reg_alpha = []\n",
+    "for i in range(10):\n",
+    "#     print(random_seeds[i], GEN[i][1], GEN[i][2])\n",
+    "    GEN_subsample.append(GEN[i][1]['subsample'])\n",
+    "    GEN_colsample_bytree.append(GEN[i][1]['colsample_bytree'])\n",
+    "    GEN_gamma.append(GEN[i][1]['gamma'])\n",
+    "    GEN_min_child_weight.append(GEN[i][1]['min_child_weight'])\n",
+    "    GEN_max_depth.append(GEN[i][1]['max_depth'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = ['drosophila', 'yeast', 'rat', 'mouse', 'human']\n",
-    "def iterator(lst):\n",
-    "    for i in lst:\n",
-    "        yield i\n"
+    "BE_subsample = []\n",
+    "BE_colsample_bytree = []\n",
+    "BE_gamma = []\n",
+    "BE_min_child_weight = []\n",
+    "BE_max_depth = []\n",
+    "BE_reg_alpha = []\n",
+    "for i in range(10):\n",
+    "#     print(random_seeds[i], BE[i][1], BE[i][2])\n",
+    "    BE_subsample.append(BE[i][1]['subsample'])\n",
+    "    BE_colsample_bytree.append(BE[i][1]['colsample_bytree'])\n",
+    "    BE_gamma.append(BE[i][1]['gamma'])\n",
+    "    BE_min_child_weight.append(BE[i][1]['min_child_weight'])\n",
+    "    BE_max_depth.append(BE[i][1]['max_depth'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_STRICT = {'subsample': most_common(STRICT_subsample),\n",
+    "               'colsample_bytree': most_common(STRICT_colsample_bytree),\n",
+    "               'gamma': most_common(STRICT_gamma),\n",
+    "               'min_child_weight': most_common(STRICT_min_child_weight),\n",
+    "               'max_depth': most_common(STRICT_max_depth)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_GEN = {'subsample': most_common(GEN_subsample),\n",
+    "               'colsample_bytree': most_common(GEN_colsample_bytree),\n",
+    "               'gamma': most_common(GEN_gamma),\n",
+    "               'min_child_weight': most_common(GEN_min_child_weight),\n",
+    "               'max_depth': most_common(GEN_max_depth)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_BE = {'subsample': most_common(BE_subsample),\n",
+    "               'colsample_bytree': most_common(BE_colsample_bytree),\n",
+    "               'gamma': most_common(BE_gamma),\n",
+    "               'min_child_weight': most_common(BE_min_child_weight),\n",
+    "               'max_depth': most_common(BE_max_depth)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -316,42 +402,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "drosophila yeast\n",
-      "drosophila rat\n",
-      "drosophila mouse\n",
-      "drosophila human\n",
-      "drosophila_rat yeast\n",
-      "drosophila_mouse yeast\n",
-      "drosophila_human yeast\n",
-      "drosophila_mouse rat\n",
-      "drosophila_human rat\n",
-      "drosophila_human mouse\n",
-      "drosophila_rat_mouse yeast\n",
-      "drosophila_rat_human yeast\n",
-      "drosophila_mouse_human yeast\n",
-      "drosophila_mouse_human rat\n",
-      "drosophila_rat_mouse_human yeast\n"
+      "{'colsample_bytree': 0.8, 'max_depth': 2, 'subsample': 0.7, 'min_child_weight': 4, 'gamma': 0.0}\n",
+      "{'colsample_bytree': 0.6, 'max_depth': 2, 'subsample': 0.7, 'min_child_weight': 2, 'gamma': 0.0}\n",
+      "{'colsample_bytree': 0.8, 'max_depth': 4, 'subsample': 0.8, 'min_child_weight': 3, 'gamma': 0.1}\n"
      ]
     }
    ],
    "source": [
-    "# for i in a[1:]:\n",
-    "#     print(a[0]+i)\n",
-    "\n",
-    "all_names = []\n",
-    "for j in range(1, 5):\n",
-    "    z = itertools.combinations(iterator(a[1:]), j)\n",
-    "    for i in z:\n",
-    "        d = '_'.join(list(i))\n",
-    "        all_names.append(d)\n",
-    "for single_name in all_names:\n",
-    "    splt = single_name.split('_', 1)\n",
-    "    name_target = splt[0]\n",
-    "    if len(splt) == 1:\n",
-    "        name_start = a[0]\n",
-    "    else:\n",
-    "        name_start = a[0]+'_'+splt[1]\n",
-    "    print(name_start, name_target)"
+    "print(best_STRICT)\n",
+    "print(best_GEN)\n",
+    "print(best_BE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_params = {'subsample': 0.7,\n",
+    "               'colsample_bytree': 0.8,\n",
+    "               'gamma': 0,\n",
+    "               'min_child_weight': 3,\n",
+    "               'max_depth': 2}"
    ]
   },
   {
