--- a/Code/Jupyter-notebooks/Plotting_all_results.ipynb
+++ b/Code/Jupyter-notebooks/Plotting_all_results.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -52,36 +52,48 @@
    },
    "outputs": [],
    "source": [
-    "results = pickle.load(open('BOW_vs_W2v.pkl', 'rb'))\n",
+    "results = pickle.load(open('BOW_vs_W2V.pkl', 'rb'))\n",
     "rf_labs = results[2]\n",
     "bow_labs = results[5]\n",
-    "w2v_labs = results[8]\n",
-    "true_test_labels = results[9]\n",
+    "w2v_labs_strict = results[8]\n",
+    "w2v_labs_gen = results[11]\n",
+    "w2v_labs_be = results[14]\n",
+    "true_test_labels = results[15]\n",
     "\n",
     "rf_accuracy = results[0] + [np.mean(results[0])]\n",
     "rf_auc = results[1] + [np.mean(results[1])]\n",
-    "rf_precision = [0.65, 0.72, 0.59, 0.60, 0.69, 0.66, 0.67, 0.65, 0.62, 0.81] + [metrics.precision_score(true_test_labels, rf_labs, average='micro')]\n",
-    "rf_recall = [0.50, 0.71, 0.59, 0.59, 0.67, 0.64, 0.67, 0.65, 0.62, 0.76] + [metrics.recall_score(true_test_labels, rf_labs, average='micro')]\n",
+    "rf_precision = [0.61, 0.71, 0.62, 0.75, 0.70, 0.70, 0.71, 0.64, 0.70, 0.65] + [metrics.precision_score(true_test_labels, rf_labs, average='micro')]\n",
+    "rf_recall = [0.53, 0.70, 0.62, 0.67, 0.70, 0.67, 0.68, 0.64, 0.69, 0.66] + [metrics.recall_score(true_test_labels, rf_labs, average='micro')]\n",
     "\n",
     "bow_accuracy = results[3] + [np.mean(results[3])]\n",
     "bow_auc = results[4] + [np.mean(results[4])]\n",
-    "bow_precision = [0.66, 0.70, 0.78, 0.64, 0.71, 0.67, 0.7, 0.64, 0.59, 0.81] + [metrics.precision_score(true_test_labels, bow_labs, average='micro')]\n",
-    "bow_recall = [0.61, 0.62, 0.72, 0.62, 0.62, 0.59, 0.70, 0.61, 0.56, 0.84] + [metrics.recall_score(true_test_labels, bow_labs, average='micro')]\n",
+    "bow_precision = [0.60, 0.76, 0.52, 0.67, 0.73, 0.64, 0.77, 0.58, 0.66, 0.61] + [metrics.precision_score(true_test_labels, bow_labs, average='micro')]\n",
+    "bow_recall = [0.44, 0.70, 0.53, 0.53, 0.72, 0.64, 0.77, 0.56, 0.63, 0.63] + [metrics.recall_score(true_test_labels, bow_labs, average='micro')]\n",
     "\n",
-    "w2v_accuracy = results[6] + [np.mean(results[6])]\n",
-    "w2v_auc = results[7] + [np.mean(results[7])]\n",
-    "w2v_precision = [0.77, 0.62, 0.64, 0.61, 0.69, 0.61, 0.75, 0.62, 0.69, 0.81] + [metrics.precision_score(true_test_labels, w2v_labs, average='micro')] \n",
-    "w2v_recall = [0.61, 0.57, 0.65, 0.61, 0.65, 0.60, 0.76, 0.62, 0.69, 0.82] + [metrics.recall_score(true_test_labels, w2v_labs, average='micro')]\n",
+    "w2v_accuracy_strict = results[6] + [np.mean(results[6])]\n",
+    "w2v_auc_strict = results[7] + [np.mean(results[7])]\n",
+    "w2v_precision_strict = [0.61, 0.68, 0.60, 0.69, 0.71, 0.60, 0.80, 0.62, 0.69, 0.65] + [metrics.precision_score(true_test_labels, w2v_labs_strict, average='micro')] \n",
+    "w2v_recall_strict = [0.49, 0.63, 0.60, 0.59, 0.70, 0.58, 0.77, 0.62, 0.69, 0.66] + [metrics.recall_score(true_test_labels, w2v_labs_strict, average='micro')]\n",
     "\n",
-    "accu_list = [rf_accuracy, bow_accuracy, w2v_accuracy]\n",
-    "auc_list = [rf_auc, bow_auc,  w2v_auc]\n",
-    "prec_list = [rf_precision, bow_precision, w2v_precision]\n",
-    "rec_list = [rf_recall, bow_recall, w2v_recall]"
+    "w2v_accuracy_gen = results[9] + [np.mean(results[9])]\n",
+    "w2v_auc_gen = results[10] + [np.mean(results[10])]\n",
+    "w2v_precision_gen = [0.62, 0.74, 0.74, 0.71, 0.79, 0.63, 0.80, 0.62, 0.73, 0.73] + [metrics.precision_score(true_test_labels, w2v_labs_gen, average='micro')] \n",
+    "w2v_recall_gen = [0.51, 0.65, 0.73, 0.64, 0.79, 0.56, 0.75, 0.62, 0.74, 0.73] + [metrics.recall_score(true_test_labels, w2v_labs_gen, average='micro')]\n",
+    "\n",
+    "w2v_accuracy_be = results[12] + [np.mean(results[12])]\n",
+    "w2v_auc_be = results[13] + [np.mean(results[13])]\n",
+    "w2v_precision_be = [0.63, 0.69, 0.74, 0.70, 0.77, 0.57, 0.83, 0.68, 0.69, 0.69] + [metrics.precision_score(true_test_labels, w2v_labs_be, average='micro')] \n",
+    "w2v_recall_be = [0.54, 0.65, 0.73, 0.63, 0.77, 0.53, 0.81, 0.67, 0.69, 0.69] + [metrics.recall_score(true_test_labels, w2v_labs_be, average='micro')]\n",
+    "\n",
+    "accu_list = [rf_accuracy, bow_accuracy, w2v_accuracy_strict, w2v_accuracy_gen, w2v_accuracy_be]\n",
+    "auc_list = [rf_auc, bow_auc,  w2v_auc_strict, w2v_auc_gen, w2v_auc_be]\n",
+    "prec_list = [rf_precision, bow_precision, w2v_precision_strict, w2v_precision_gen, w2v_precision_be]\n",
+    "rec_list = [rf_recall, bow_recall, w2v_recall_strict, w2v_recall_gen, w2v_recall_be]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -91,10 +103,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f6fc54bd9e8>"
+       "<matplotlib.text.Text at 0x7f5e4a537eb8>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +115,7 @@
     "fig, ax = plt.subplots(2, 2)\n",
     "random_seeds = [\"144\", \"235\", \"905\", \"2895\", \"3462\", \"4225\", \"5056\", \"5192\", \"7751\", \"7813\", \"AVG\"]\n",
     "inds = list(range(11))\n",
-    "for accu, auc, prec, rec, name, mar in zip(accu_list, auc_list, prec_list, rec_list, ['BOW RF', 'BOW XGB', 'W2V XGB'], ['o', 'v', 's']):\n",
+    "for accu, auc, prec, rec, name, mar in zip(accu_list, auc_list, prec_list, rec_list, ['BOW RF', 'BOW XGB', 'W2V SR XGB', 'W2V GEN XGB', 'W2V FL XGB'], ['o', 'v', 's', '>', '^']):\n",
     "    ax[0,0].scatter(inds, accu, s=90, marker=mar, label=name+' = '+str(accu[10]))\n",
     "    ax[0,0].plot(inds, accu)\n",
     "    ax[0,0].set_title('Accuracy')\n",
@@ -145,9 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -171,14 +185,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -230,18 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f6fc4f38e80>"
+       "<matplotlib.text.Text at 0x7fec3bde8940>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,9 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -342,18 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f6fc4d7b0b8>"
+       "<matplotlib.text.Text at 0x7fec3bc122b0>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -456,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -466,10 +488,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f6fc4b4b518>"
+       "<matplotlib.text.Text at 0x7fec3b97c0f0>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -572,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -582,10 +604,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f6fc3ef91d0>"
+       "<matplotlib.text.Text at 0x7fec3b766668>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -688,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -698,10 +720,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x7f6fc39e0438>"
+       "<matplotlib.text.Text at 0x7fec3aabf518>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +776,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
