--- a/Code/Jupyter-notebooks/Bag-of-Words comparison.ipynb
+++ b/Code/Jupyter-notebooks/Bag-of-Words comparison.ipynb
@@ -950,9 +950,7 @@
     "w2v_strict = yeast_strict_model\n",
     "w2v_gen = yeast_gen_model\n",
     "w2v_be = yeast_be_model\n",
-    "xgb_clf = XGBClassifier(learning_rate = 0.05,\n",
-    "                        n_estimators = 1000,\n",
-    "                        subsample=0.7,\n",
+    "xgb_clf = XGBClassifier(subsample=0.7,\n",
     "                        colsample_bytree=0.8,\n",
     "                        gamma=0,\n",
     "                        min_child_weight=3,\n",
@@ -1486,9 +1484,7 @@
     "name_of_result = 'yeast_W2V'\n",
     "strict_data = yeast_strict\n",
     "w2v_strict = yeast_strict_model\n",
-    "xgb_clf = XGBClassifier(learning_rate = 0.05,\n",
-    "                        n_estimators = 1000,\n",
-    "                        subsample=0.7,\n",
+    "xgb_clf = XGBClassifier(subsample=0.7,\n",
     "                        colsample_bytree=0.8,\n",
     "                        gamma=0,\n",
     "                        min_child_weight=3,\n",
@@ -1882,9 +1878,7 @@
     "name_of_result = 'yeast_W2V'\n",
     "strict_data = yeast_strict\n",
     "w2v_gen = yeast_gen_model\n",
-    "xgb_clf = XGBClassifier(learning_rate = 0.05,\n",
-    "                        n_estimators = 1000,\n",
-    "                        subsample=0.7,\n",
+    "xgb_clf = XGBClassifier(subsample=0.7,\n",
     "                        colsample_bytree=0.8,\n",
     "                        gamma=0,\n",
     "                        min_child_weight=3,\n",
